# pax-game

./: .gitignore  CMakeLists.txt  DOCS.md  README.md  TODO.md
src/: CMakeLists.txt  defs.hpp  defs.hpp.in  main.cpp
src/engine/: CMakeLists.txt  engine.cpp  engine.hpp
src/engine/?/: kades code.py
src/engine/core/: audio.cpp  audio.hpp  entity.cpp  entity.hpp  timestep.cpp  timestep.hpp  window.cpp  window.hpp
src/engine/dat_structs/: vector2.hpp
src/engine/entity/: entity.cpp  entity.hpp
src/engine/time/: dt.hpp  kades code.py
